<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    android:background="@color/defaultwhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/color1"
            android:gravity="center"
            android:orientation="horizontal">

            <!---->

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_folder_white_48dp" />
            <!-- -->


            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_plus_white_36dp" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/baseline_camera_alt_white_48dp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/to_get_going_we_need_to_access"
                android:textColor="@color/gray"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="top|start"
                    android:text="@string/phone_and_storage"
                    android:textColor="@color/gray"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="start|center"
                    android:text="@string/security_experience"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
                     android:gravity="top|left"
                     android:text="@string/camera_permission"
                     android:textColor="@color/gray"
                     android:textSize="14dp"
                     android:textStyle="bold" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="24dp"
                     android:layout_marginRight="16dp"
                     android:gravity="left|center"
                     android:text="To capture images from camera directly"
                     android:textColor="@color/gray"
                     android:paddingBottom="8dp"
                     android:textSize="12dp" />
             </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="end">

            <Button
                android:id="@+id/buttonContinue"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:text="Continue"
                android:textColor="@color/color1"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>